src/app/main-dashboard/main-dashboard.component.css
.sidenav-content {
    height: 100vh;
}
.sidenav{
    width: 5%;
}
.menu-item:hover{
   background-color: #ddd !important;
}
.active-link {
  background-color: #eee !important;
  font-weight: bold;
  border-right: 4px solid rgb(20, 136, 245);
}
.dash-heading-text {
    color: #2899db;
}
.z-index-high {
   z-index: 9999;
}
.mini-sidenav {
    width: 250px;
    padding: 0;
    
}
.menu-item {
    outline: 0;
}
.sidemenu-expand {
    width: 100%;
    position: absolute;
    bottom: 0;
    padding: 20px 0;
}
.expand-arrow-container {
    display: flex;
    border-top: 1px solid rgb(228, 227, 227);
}
.expand-btn {
    border: none;
    outline: none;
}

.expand-btn:hover {
    background-color: #ddd;
}

